--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
+    "csv-parse": "^5.5.6",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
