--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,4 +4,4 @@ on:
 
 jobs:
   lint:
-    uses: seamuslowry/workflows/.github/workflows/lint_npm.yml@feat/lint_npm
+    uses: seamuslowry/workflows/.github/workflows/lint_npm.yml@feat/npm_lint
