--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "lodash.range": "^3.2.0",
-    "next": "14.2.2",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
