--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+  development-dependencies:
+    dependency-type: "development"
+  production-patch-dependencies:
+    dependency-type: "production"
+    update-types:
+      - patch
