--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,8 +11,11 @@ updates:
       interval: "weekly"
     versioning-strategy: "increase"
     groups:
-      development-dependencies:
+      non-major-development-dependencies:
         dependency-type: "development"
+        update-types:
+          - update
+          - patch
       production-patch-dependencies:
         dependency-type: "production"
         update-types:
