--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,11 @@ updates:
       interval: "weekly"
     versioning-strategy: "increase"
     groups:
+      react-dependencies:
+        patterns:
+          - "react*"
+          - "@types/react*"
+          - "next"
       non-major-development-dependencies:
         dependency-type: "development"
         update-types:
@@ -20,7 +25,3 @@ updates:
         dependency-type: "production"
         update-types:
           - patch
-      production-react-dependencies:
-        dependency-type: "production"
-        patterns:
-          - "react*"
