--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash.range": "^3.2.0",
     "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@types/lodash.range": "^3.2.9",
