--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/lodash.range": "^3.2.9",
     "@types/node": "^22",
     "@types/react": "^19",
@@ -29,7 +30,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   },
   "engines": {
