--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,12 @@ updates:
       interval: "weekly"
     versioning-strategy: "increase"
     groups:
+      react-suite:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "@types/react"
+          - "@types/react-dom"
       non-major-development-dependencies:
         dependency-type: "development"
         update-types:
@@ -20,6 +26,7 @@ updates:
         dependency-type: "production"
         update-types:
           - patch
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
