--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,10 @@ updates:
           - "react-dom"
           - "@types/react"
           - "@types/react-dom"
+      nextjs-suite:
+        patterns:
+          - "next"
+          - "eslint-config-next"
       non-major-development-dependencies:
         dependency-type: "development"
         update-types:
